# cpp-parser

./: README.md  cpp-parser.cabal  test.hs
app/: Main.hs
clangpure/: Setup.hs  clangpure.cabal  stack.yaml
doc/: compiling_llvm.txt
doc/html/clangpure/: Language-C-Clang-Cursor-Typed.html  Language-C-Clang-Cursor.html  Language-C-Clang-File.html  Language-C-Clang-Location.html  Language-C-Clang-Token.html  Language-C-Clang-TranslationUnit.html  Language-C-Clang-Type.html  Language-C-Clang.html  clangpure.haddock  doc-index-A.html  doc-index-All.html  doc-index-B.html  doc-index-C.html  doc-index-D.html  doc-index-E.html  doc-index-F.html  doc-index-G.html  doc-index-H.html  doc-index-I.html  doc-index-L.html  doc-index-M.html  doc-index-N.html  doc-index-O.html  doc-index-P.html  doc-index-R.html  doc-index-S.html  doc-index-T.html  doc-index-U.html  doc-index-V.html  doc-index-W.html  doc-index.html  index.html  mini_Language-C-Clang-Cursor-Typed.html  mini_Language-C-Clang-Cursor.html  mini_Language-C-Clang-File.html  mini_Language-C-Clang-Location.html  mini_Language-C-Clang-Token.html  mini_Language-C-Clang-TranslationUnit.html  mini_Language-C-Clang-Type.html  mini_Language-C-Clang.html
doc/html/clangpure/src/: Language.C.Clang.Cursor.Typed.html  Language.C.Clang.Cursor.html  Language.C.Clang.File.html  Language.C.Clang.Internal.Context.html  Language.C.Clang.Internal.FFI.html  Language.C.Clang.Internal.Refs.html  Language.C.Clang.Internal.Types.html  Language.C.Clang.Location.html  Language.C.Clang.Token.html  (+3 more)
src/: ParseCPP.hs
test/: comp.txt
(+1 files in other folders)
