name:                cpp-parser
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/theoremprover/cpp-parser#readme
license:             BSD3
license-file:        LICENSE
author:              Robert
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Language
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     ParseCPP
  build-depends:       base >= 4.7 && < 5, clangpure, lens, bytestring
  default-language:    Haskell2010

executable cpp-parser-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base, cpp-parser,
                       clangpure, lens, bytestring, filepath
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/theoremprover/cpp-parser
